<resources>
    <string name="app_name"> عناية</string>
    <string name="facebook_app_id">3282205678555332</string>
    <string name="fb_login_protocol_scheme">fb3282205678555332</string>
    <string name="server_client_id">862112895081-a7a9u6vrovg0fbuo4pl0393tcal0dg9i.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="contact_us">إتصل بنا</string>
    <string name="about_us">عن التطبيق</string>
    <string name="prefrances">المفضلة</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="more_title">المزيد</string>
    <string name="settings_title">الإعدادات</string>
    <string name="appoint_now_txt">أحجز الآن</string>
    <string name="register_txt">تسجيل الدخول</string>
    <string name="search_item">الرئيسية</string>
    <string name="offers_item">العروض</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>

    <string name="date_item">المواعيد</string>
    <string name="settings">الاعدادات</string>
    <string name="edite_password">تعديل كلمة الرور</string>

    <string name="search">البحث</string>

    <string name="search_by_name">ابحث بأسم الطبيب</string>
    <string name="search_by_spicialist">بحث حسب التخصص</string>
    <string name="pharmacy_search">بحث عن الصيدليات</string>
    <string name="flag_txt">لأن صحتك تهمنا</string>
    <string name="labs_search">بحث عن المختبرات</string>
    <string name="registration_title">سجل الآن</string>
    <string name="full_name">الأسم بالكامل</string>
    <string name="add_message">أضف رسالة</string>

    <string name="mobile_number"> رقم الموبايل بدون..0</string>
    <string name="e_mail">  البريد الإلكتروني</string>
    <string name="e_mail_or_mobile"> البريد الإلكتروني أو رقم الموبايل</string>

    <string name="password">رمز الدخول</string>
    <string name="date_of_birth">تاريخ الميلاد</string>
    <string name="gender">الجنس</string>
    <string name="female">أنثى</string>
    <string name="male">ذكر</string>
    <string name="save">سجل الآن</string>
    <string name="login">تسجيل دخول</string>
    <string name="forget_password">هل نسيت كلمة المرور؟</string>
    <string name="rouls_conditions">الشروط والقوانين</string>
    <string name="new_acount">إنشاء حساب جديد</string>
    <string name="login_facebook">الدخول عن طريق الفيسبوك</string>
    <string name="login_twitter">الدخول عن طريق تويتر</string>
    <string name="login_google">الدخول عن طريق جوجل</string>
    <string name="fav_doc">الأطباء</string>
    <string name="fav_offers">العروض</string>
    <string name="continue_with_google">متابعة باستخدام جوجل</string>


    <string name="or">أو</string>
    <string name="title_activity_settings" translatable="false">الاعدادات</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="how_it_work">كيف يعمل التطبيق</string>
    <string name="change_language">تغيير اللغة</string>
    <string name="change_password">تعديل كلمة المرور</string>
    <string name="edit_profile">تعديل بيانات الحساب</string>
    <string name="appointments">مواعيدي</string>
    <string name="favorites">المفضلة</string>

    <string name="no_offers">لا يوجد لديك عروض</string>
    <string name="no_appointments">لا يوجد لديك حجوزات</string>
    <string name="chose_doctor">اختر الطبيب</string>
    <string name="no_search_results">لا يوجد نتائج</string>
    <string name="select_reagon">أختر المنطقة</string>
    <string name="cost">التكلفة:</string>
    <string name="waiting">مدة الإنتظار:</string>
    <string name="book_now">احجز الان</string>
    <string name="chose_specialty">أختر التخصص</string>
    <string name="progress_txt">الرجاء الإنتظار</string>

    <string name="no_internet">لا يوجد إتصال بشبكة الإنترنت</string>
    <string name="logout_alert">هل تريد تسجيل الخروج؟</string>
    <string name="exit">خروج</string>
    <string name="dismiss">إخفاء</string>
    <string name="search_doctor_hint">ابحث باسم الطبيب</string>
    <string name="doctor">دكتور:</string>
    <string name="doctorah">دكتورة:</string>
    <string name="lab_search_hint">ابحث باسم المختبر</string>
    <string name="discount">خصم</string>
    <string name="select_type">أختر نوع الحساب</string>

    <string name="PATIENT">مريض</string>
    <string name="DOCTOR">طبيب</string>
    <string name="DOCTORS">أطباء</string>
    <string name="LAB">مختبر</string>
    <string name="LABS">مختبرات</string>

    <string name="PHARM">صيدلية</string>


    <string name="doctors_list">قائمة الأطباء</string>
    <string name="visitors">زائر</string>
    <string name="profile">بيانات الطبيب</string>
    <string name="waiting_time">مدة الإنتظار</string>
    <string name="cost_amount">سعر الكشف</string>
    <string name="date_hint">الدخول في ميعاد الحجز المحدد</string>
    <string name="booking_hint">احجز الآن وسيتم أرسال تفاصيل العنوان بالكامل ورقم العيادة</string>
    <string name="rating">التقييم العام من</string>
    <string name="seen">مشاهدة</string>
    <string name="doctor_info">معلومات عن الطبيب</string>
    <string name="more">المزيد</string>
    <string name="less">أقل</string>
    <string name="booking_dates">مواعيد الحجز</string>
    <string name="booking_order">طلب الحجز</string>
    <string name="booking_check">انا أقوم بالحجز لمريض أخر</string>
    <string name="language_setting">ضبط اللغة</string>
    <string name="lang_btn">حفظ</string>
    <string name="ratings">التقييمات</string>
    <string name="thanks">شكراً</string>
    <string name="done">تم حجزك بنجاح</string>
    <string name="derham">دينار</string>
    <string name="price">السعر</string>
    <string name="help">طلب المساعدة</string>
    <string name="cancel">إلغاء</string>
    <string name="map">الخريطة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="please_enter_new_password">ادخل كلمة المرور الجديدة</string>
    <string name="edit_password">نعديل كلمة المرور</string>
    <string name="save_btn">حفظ</string>
    <string name="contactus_txt">نحن سعداء لتلقي إستفساراتكم وإقتراحاتكم</string>
    <string name="formorcontact">للمزيد اتصل ب</string>
    <string name="send_message">إرسال</string>
    <string name="cu">إتصل بنا</string>
    <string name="by_gategory">أقسام العروض</string>
    <string name="show_all">شاهد الكل</string>
    <string name="most_viewed">الأكثر طلباً</string>
    <string name="offer_details">بيانات العرض</string>
    <string name="info">معلومات</string>
    <string name="offer_provider_data">بيانات مقدم الخدمة</string>
    <string name="all_categoris_title">ابحث حسب الفئة</string>
    <string name="pharmacy_offers_title">عروض الصيدليات</string>
    <string name="pharmacy">صيدلية: </string>
    <string name="type">الصنف: </string>
    <string name="labs_lists">قائمة المختبرات</string>
    <string name="search_by_reagon">بحث حسب المنطقة</string>
    <string name="search_for_labs">البحث عن مختبر</string>
    <string name="search_by_nam_labs">ابحث باسم المختبر</string>
    <string name="address">العنوان:</string>
    <string name="laboratory_details">بيانات المختبر</string>
    <string name="test_typs">اختر نوع االتحليل</string>
    <string name="avilable_dates">المواعيد المتاحة</string>
    <string name="to">إلى</string>
    <string name="pay_cash_in_clinic">الدفع نقداً في العيادة</string>
    <string name="go_to_location">الذهاب للموقع</string>
    <string name="title_activity_verivication" translatable="false">VerivicationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="true">التالي</string>
    <string name="previous" translatable="true">السابق</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="verivication">تفعيل الحساب</string>
    <string name="try_again">أعد المحاولة</string>
    <string name="not_recieved">لم يتم إستلام الرسالة</string>
    <string name="ver_hint">سيتم ارسال رمز التأكيد في رسالة قصيرة</string>
    <string name="Shift">صيدلية خافرة</string>
    <string name="houre"> ساعة</string>
    <string name="search_for_pharmacy">البحث عن الصيدليات</string>
    <string name="ph_search_name">ابحث بأسم الصيدلية</string>
    <string name="pharmacy_details">تفاصيل الصيدلية</string>
    <string name="bookin_alert">لعرض الحجوزات الرجاء تسجيل الدخول</string>
    <string name="con_password">تأكيد رمز الدخول</string>
    <string name="forget_pw">نسيت كلمة المرور</string>
    <string name="pw">كلمة المرور</string>
    <string name="repass">إعادة ضبط كلمة المرور</string>
    <string name="no_offers_fonded">لا يوجد عروض </string>
    <string name="helptext">طلب المساعدة</string>
    <string name="register">تسجيل</string>
    <string name="select_country">اختر الدولة</string>
    <string name="select_language">اختر اللغة</string>
    <string name="dont_have_account">ليس لديك حساب؟</string>
    <string name="name_title">الاسم:</string>
    <string name="register_here">سجل من هنا</string>


</resources>