<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/search_item" />
    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/bottom_nav_offers"
        android:enabled="true"
        android:title="@string/offers_item" />
    <item
        android:id="@+id/navigation_appointment"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_appointment"
        android:title="@string/date_item" />
    <item
        android:id="@+id/navigation_extras"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_more"
        android:title="@string/more_title"/>
</menu>