<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/offers_item"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
    <ScrollView
        android:id="@+id/offer_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/offers_pager_Slider"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                />
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_margin="5dp"
                    android:text="@string/by_gategory"/>
                <TextView
                    android:id="@+id/show_all_btn"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_margin="5dp"
                    android:textColor="@color/blue"
                    android:text="@string/show_all"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                />
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_margin="5dp"
                    android:text="@string/most_viewed"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/offers_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/progress_layout"
        android:id="@+id/progrss_lay"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:visibility="gone"/>


</LinearLayout>